--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,13 @@
     --primary-color: #2c3e50;
     --secondary-color: #2c3e50;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    margin: 5em;
+}
+
+fieldset  {
+    border: none;
+}
