--- a/styles/uitleg.css
+++ b/styles/uitleg.css
@@ -1,90 +1,8 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+input:user-valid {
+  border: 2px solid green;
 }
 
-:root {
-  color-scheme: light dark;
-  --background-color: light-dark(#ffffff, #121212);
-  --primary-color: light-dark(#fec718, #1f1b24);
-  --secondary-color: light-dark(#2c3e50, #1a252f);
-  --text-color: light-dark(#233973, #ffffff);
-  --button-color: light-dark(#2b61ab, #3700b3);
-}
-
-body {
-  font-family: NS Sans, Segoe UI, Myriad, Verdana, sans-serif;
-  background-color: var(--background-color);
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  margin: 5em;
-  color: var(--text-color);
-}
-
-form {
-  background-color: var(--primary-color);
-  padding: 1em;
-  width: 80vw;
-  display: flex;
-  gap: 2em;
-}
-
-nav {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  min-width: 10em;
-}
-
-nav input[type="radio"] {
-  display: none;
-}
-
-nav label {
-  cursor: pointer;
-  padding: 0.5rem 1rem;
-  background-color: #ddd;
-  width: 100%;
-  margin-bottom: 0.5rem;
-}
-
-nav input[type="radio"]:checked + label {
-  background-color: #bbb;
-}
-
-.tab-content {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-}
-
-.container {
-  display: grid;
-  grid-auto-rows: 0.5fr;
-}
-.container fieldset {
-  display: flex;
-  flex-direction: column;
-}
-
-fieldset {
-  border: none;
-}
-
-section {
-  opacity: 0;
-  max-height: 0;
-  overflow: hidden;
-  transition: opacity 0.4s ease, max-height 0.4s ease;
-}
-
-form:has(#tab1:checked) .sectie1,
-form:has(#tab2:checked) .sectie2,
-form:has(#tab3:checked) .sectie3,
-form:has(#tab4:checked) .sectie4 {
-  opacity: 1;
-  max-height: 100vh; /* or adjust to your needs */
+input:user-valid + span::before {
+  content: "✓";
+  color: green;
 }
